--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="pfp.jpg" alt="pfp">
           </div>
           <div class="col">
-            <h3>黎樱 <ion-icon name="heart" class = 'icon'></ion-icon></h3>
+            <h3>花落 <ion-icon name="heart" class = 'icon'></ion-icon></h3>
             <p>Pisces (>ω<)</p>
           </div>
         </div>
