--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon Ico -->
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!--========== BOX ICONS ==========-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -17,53 +17,45 @@
   <title>My Bio</title>
 </head>
 <body>
-    <section class = "card">
 
-      <!-- Two Circles -->
-      <div class="card__circle card__circle1"></div>
-      <div class="card__circle card__circle2"></div>
+  <!-- Two Circles -->
+  <div class="card__circle card__circle1"></div>
+  <div class="card__circle card__circle2"></div>
 
-      <!-- Card Itself -->
-      <div class="card-container bd-container">
-        <div class="card__glass">
-
-            <!-- Flex Box -->
-            <div class="row">
-              <div class="col">
-                <!-- First Img -->
-                <img src="pfp.jpg" alt="pfp" class="card__img">
-              </div>
-              <div class="col">
-                  <h3 class="card__title">花落 <ion-icon name="heart" class = 'icon'></ion-icon></h3>
-                  <p>Pisces (>ω<)</p>
-              </div>
-            </div>
-
-            <div class="about-me">
-              <span>About Me</span>
-              <p>初次相遇，彼此熟悉，再续前缘，<br>已牵红线</p>
-              <p>心灵相通，快乐无比，无需多言，<br>珍惜时光</p>
-            </div>
-
-
-            <div class="card__social">
-              <a href="https://www.facebook.com/profile.php?id=100008002033204" target = "_blank" class="card__link"><i class='bx bxl-facebook' ></i></a>
-              <a href="https://www.instagram.com/joeylim0223/" target = "_blank"" class="card__link"><i class='bx bxl-instagram'></i></a>
-              <a href="https://www.douyin.com/user/MS4wLjABAAAAAYtbr98jRmOEUkIChODN4xFzbHro130L_ygTEzseHW0" target = "_blank"" class="card__link"><i class='bx bxl-tiktok' ></i></a>
-            </div>
-
-            <div class="last">
-              <p><span>微信号</span> : fnjl1110</p>
-              <h3>俊华  <ion-icon name="heart" class = 'icon'></ion-icon></h3>
-            </div>
-            
-          </div>
-
-
+  <!-- Card Itself -->
+  <div class="card__glass">
+    <div class="wrapper">
+      <div class="row">
+        <div class="col">
+          <!-- First Img -->
+          <img src="pfp.jpg" alt="pfp" class="card__img">
         </div>
+        <div class="col">
+          <h3 class="card__title">花落 <ion-icon name="heart" class = 'icon'></ion-icon></h3>
+          <p>Pisces (>ω<)</p>
+        </div>
+      </div>
+  
+      <div class="about-me">
+        <span>About Me</span>
+        <p>初次相遇，彼此熟悉，再续前缘，已牵红线</p>
+        <p>心灵相通，快乐无比，无需多言，珍惜时光</p>
+      </div>
+  
+      <div class="card__social">
+        <a href="https://www.facebook.com/profile.php?id=100008002033204" target = "_blank" class="card__link"><i class='bx bxl-facebook' ></i></a>
+        <a href="https://www.instagram.com/joeylim0223/" target = "_blank"" class="card__link"><i class='bx bxl-instagram'></i></a>
+        <a href="https://www.douyin.com/user/MS4wLjABAAAAAYtbr98jRmOEUkIChODN4xFzbHro130L_ygTEzseHW0" target = "_blank"" class="card__link"><i class='bx bxl-tiktok' ></i></a>
+      </div>
+  
+      <div class="last">
+        <p><span>微信号</span> : fnjl1110</p>
+        <h3>俊华  <ion-icon name="heart" class = 'icon'></ion-icon></h3>
+      </div>
+    </div>
 
-    </section>
+  </div>
 
-    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
